Update Dockerfile
Add git